Prevent slider slide headings wrapping on ALL SCREEN SIZES.
Width of heading container was making headings wrap on all screens, despite having plenty of room.
add white-space: nowrap; to the headings.

--- a/assets/scss/3-modules/_sliders.scss
+++ b/assets/scss/3-modules/_sliders.scss
@@ -33,6 +33,7 @@
   top: 55%;
   width: 7%;
   z-index: 4444;
+  white-space: nowrap;
 }
 
 @media screen and (min-width: 488px) {
